// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelDrawerButton should match, full snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "width": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Object {
            "height": 25,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`ChannelDrawerButton should match, full snapshot 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "width": 55,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <View>
      <Icon
        allowFontScaling={false}
        color="#ffffff"
        name="md-menu"
        size={25}
      />
      <Badge
        count={1}
        countStyle={
          Object {
            "color": "#145dbf",
            "fontSize": 10,
          }
        }
        extraPaddingHorizontal={10}
        minHeight={20}
        minWidth={20}
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
            "borderColor": "#1153ab",
            "borderRadius": 10,
            "borderWidth": 1,
            "left": -13,
            "padding": 3,
            "position": "absolute",
            "right": 0,
            "top": -4,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;
